[package]
name = "alf"
version = "0.1.0"
authors = ["Olivier Lischer <olivier.lischer@liolin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
clap = "2.33"
webbrowser = "0.5"
